# GoodsackEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  GoodsackEngineConfig.h.in  LICENSE.txt  README.md  test.lua  testgtest.cpp  vcpkg.json  version.txt
demo/: CMakeLists.txt
demo/demo_future/: project.ini
demo/demo_hot/: .gitignore  appicon.rc  demo_scenes.c  demo_scenes.h  main.cpp
demo/demo_hot/Resources/: test.gcfg
demo/demo_hot/Resources/materials/: brick.material  cube.material
demo/demo_hot/Resources/models/: AK2.glb  character-anim.gltf  character-skinned.gltf  character.gltf  character.mtl  sponza.gcfg
demo/demo_hot/Resources/models/raw/: character.blend  character.blend1
demo/demo_hot/Resources/scripts/: camera-input.lua  common.lua  ecs-system.lua  ecs-system2.lua  example.lua  keycodes.lua  main.lua  maths.lua  rotate.lua  weapon-system.lua  wepsway-system.lua
demo/demo_hot/Resources/scripts/systems/: camera_fov.lua  weapon_controller.lua  weapon_sway.lua
demo/demo_hot/Resources/textures/brickwall/: config.gcfg
demo/demo_hot/Resources/textures/earth/: earth.gcfg
demo/demo_hot/Resources/textures/pbr/cerberus/: cerberus.gcfg  cerberus.material
demo/demo_hot/src/: main.cpp
demo/demo_hot/src/scenes/: demo_scenes.c  demo_scenes.h  scene_7_transform.c  scene_8_maptest.c  scene_9_asset.c
goodsack/gsk/gsk/: CMakeLists.txt  README.md
goodsack/gsk/gsk/api/: README.md
goodsack/gsk/gsk/api/llib/: common.h  llib_goodsack.c  llib_vector.c
goodsack/gsk/gsk/api/llib/goodsack/: llib_filesystem.c  llib_input.cpp  llib_time.c
goodsack/gsk/gsk/api/lua/: init.lua
goodsack/gsk/gsk/asset/: CMakeLists.txt  asset.c  asset.cpp  asset.h  asset.hpp  asset_cache.c  asset_cache.h  asset_defs.h  asset_gcfg.c  asset_gcfg.h  assetdefs.h
goodsack/gsk/gsk/asset/__tests__/: asset-test.cpp
goodsack/gsk/gsk/asset/gpak/: gpak.c  gpak.h
goodsack/gsk/gsk/asset/gpak/__tests__/: gpak-test.cpp
goodsack/gsk/gsk/asset/import/: calculate_tbn.c  calculate_tbn.h  loader_gcfg.c  loader_gcfg.h  loader_gltf.c  loader_gltf.h  loader_obj.c  loader_obj.h  loader_qmap.c  loader_qmap.h  loader_wav.c  loader_wav.h
goodsack/gsk/gsk/asset/qmap/: qmap_build.c  qmap_build.h  qmap_model.c  qmap_model.h  qmap_parse.c  qmap_parse.h  qmap_util.c  qmap_util.h  qmapdefs.h
goodsack/gsk/gsk/asset/types/: model_asset.hpp  texture_asset.cpp  texture_asset.hpp
goodsack/gsk/gsk/core/audio/: audio_clip.c  audio_clip.h  music_composer.c  music_composer.h  music_composer_loader.cpp  music_composer_loader.hpp
goodsack/gsk/gsk/core/device/: device.c  device.h  device_context.c  device_context.h
goodsack/gsk/gsk/core/drivers/alsoft/: alsoft.c  alsoft.h  alsoft_buffer.c  alsoft_buffer.h  alsoft_debug.c  alsoft_debug.h
goodsack/gsk/gsk/core/drivers/opengl/: opengl.h  opengl_buffer.c  opengl_buffer.h  opengl_debug.c  opengl_debug.h
goodsack/gsk/gsk/core/drivers/vulkan/: vulkan.h  vulkan_buffer.c  vulkan_buffer.h  vulkan_command.c  vulkan_command.h  vulkan_context.c  vulkan_context.h  vulkan_debug.c  vulkan_debug.h  vulkan_depth.c  vulkan_depth.h  vulkan_descriptor.c  vulkan_descriptor.h  vulkan_descriptor_builder.c  vulkan_descriptor_builder.h  vulkan_device.c  vulkan_device.h  vulkan_framebuffer.c  vulkan_framebuffer.h  vulkan_image.c  vulkan_image.h  vulkan_index_buffer.c  vulkan_index_buffer.h  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_render.c  vulkan_render.h  vulkan_support.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_uniform_buffer.c  vulkan_uniform_buffer.h  vulkan_vertex_buffer.c  vulkan_vertex_buffer.h
goodsack/gsk/gsk/core/graphics/buffers/: buffers.h
goodsack/gsk/gsk/core/graphics/lighting/: lighting.c  lighting.h  skybox.c  skybox.h
goodsack/gsk/gsk/core/graphics/material/: material.c  material.h
goodsack/gsk/gsk/core/graphics/mesh/: animation.c  animation.h  mesh.c  mesh.h  mesh_helpers.inl  model.c  model.h  primitives.c  primitives.h
goodsack/gsk/gsk/core/graphics/particles/: particle_system.c  particle_system.h
goodsack/gsk/gsk/core/graphics/renderer/: renderer_props.inl
goodsack/gsk/gsk/core/graphics/scene/: scene.c  scene.h
goodsack/gsk/gsk/core/graphics/shader/: shader.c  shader.h
goodsack/gsk/gsk/core/graphics/texture/: texture.c  texture.h  (+2 more)
goodsack/gsk/gsk/entity/: ecs.c  ecs.h  ecsdefs.h
goodsack/gsk/gsk/entity/__generated__/: components_gen.h  components_gen_register.h
goodsack/gsk/gsk/entity/component/: ecs_component.cpp  ecs_component.hpp  ecs_component_layout.cpp  ecs_component_layout.hpp  ecs_component_layout_loader.cpp  ecs_component_layout_loader.hpp
goodsack/gsk/gsk/entity/lua/: eventstore.cpp  eventstore.hpp  reg_system.cpp  reg_system.hpp
goodsack/gsk/gsk/entity/modules/: component_test.h  components.h  modules_systems.h
goodsack/gsk/gsk/entity/v1/: ecs.c  ecs.h
goodsack/gsk/gsk/io/: CMakeLists.txt  io_asset.h  parse_image.c  parse_image.h  serialize_model.c  serialize_model.h
goodsack/gsk/gsk/physics/: physics_collision.c  physics_collision.h  physics_solver.c  physics_solver.h  physics_types.h  physics_types.inl
goodsack/gsk/gsk/prog/test/: gsk_gen_main.cpp  gsk_test_main.cpp
goodsack/gsk/gsk/runtime/: gsk_runtime.cpp  gsk_runtime.hpp  gsk_runtime_main.cpp  gsk_runtime_wrapper.cpp  gsk_runtime_wrapper.h  runtime_state.c  runtime_state.h
goodsack/gsk/gsk/tools/debug/: debug_context.c  debug_context.h  debug_draw_bounds.c  debug_draw_bounds.h  debug_draw_line.c  debug_draw_line.h  debug_draw_skeleton.c  debug_draw_skeleton.h  debug_panel.cpp  debug_panel.hpp  debug_toolbar.cpp  debug_toolbar.hpp
goodsack/gsk/gsk/util/: ansi_colors.h  array_list.c  array_list.h  filesystem.c  filesystem.h  gfx.h  hash_table.c  hash_table.h  logger.c  logger.h  lua_deps.h  maths.h  sysdefs.h  vec_colors.h
goodsack/gsk/gsk/util/__tests__/: array_list-test.cpp  filesystem-test.cpp  hash_table-test.cpp
goodsack/gsk/gsk/wrapper/: lua_libs.c
goodsack/gsk/gsk/wrapper/lua/: lua_debug.c  lua_debug.h  lua_hook.c  lua_hook.h  lua_init.cpp  lua_init.hpp  lua_libs.h  lua_reg_print.c  lua_reg_print.h
src/: ;  (+27 more)
(+625 files in other folders)
